--- a/Gangyebab/Gangyebab/Home/View/Cell/TodoCollectionViewCell.xib
+++ b/Gangyebab/Gangyebab/Home/View/Cell/TodoCollectionViewCell.xib
@@ -29,31 +29,32 @@
                             <constraint firstAttribute="height" constant="1" id="zGa-6Z-j1o"/>
                         </constraints>
                     </view>
-                    <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="B1y-hc-FUV">
-                        <rect key="frame" x="10" y="0.0" width="326" height="23"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="B1y-hc-FUV">
+                        <rect key="frame" x="10" y="0.0" width="326" height="20"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="circle.inset.filled" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="hVj-YQ-NJh">
-                                <rect key="frame" x="0.0" y="0.99999999999999822" width="23" height="21.666666666666664"/>
+                                <rect key="frame" x="0.0" y="0.99999999999999822" width="20" height="18.666666666666664"/>
                                 <color key="tintColor" name="stringColor1"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="hVj-YQ-NJh" secondAttribute="height" multiplier="1:1" id="6v4-js-cz1"/>
                                 </constraints>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SX7-AS-bGQ" userLabel="Importance Color">
-                                <rect key="frame" x="28" y="0.0" width="5" height="23"/>
+                                <rect key="frame" x="25" y="1.6666666666666661" width="5" height="17"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="5" id="PsM-He-gX0"/>
+                                    <constraint firstAttribute="height" constant="17" id="n6y-gz-Zp1"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Qc-RF-VKx" userLabel="Content Label">
-                                <rect key="frame" x="38" y="0.0" width="37" height="23"/>
+                                <rect key="frame" x="35" y="1" width="41.666666666666657" height="18"/>
                                 <fontDescription key="fontDescription" name="SOYO-Maple-Regular" family="SOYO Maple" pointSize="15"/>
                                 <color key="textColor" name="stringColor1"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HNo-HF-cez">
-                                <rect key="frame" x="80" y="0.0" width="246" height="23"/>
+                                <rect key="frame" x="81.666666666666671" y="0.0" width="244.33333333333331" height="20"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                         </subviews>
@@ -67,7 +68,7 @@
                 <constraint firstItem="B1y-hc-FUV" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="1hc-kQ-qfd"/>
                 <constraint firstAttribute="trailing" secondItem="4Qn-MH-44e" secondAttribute="trailing" id="3OU-dx-QZR"/>
                 <constraint firstItem="B1y-hc-FUV" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="Kin-kz-NiX"/>
-                <constraint firstAttribute="bottom" secondItem="B1y-hc-FUV" secondAttribute="bottom" constant="7" id="jCZ-Mz-GoC"/>
+                <constraint firstAttribute="bottom" secondItem="B1y-hc-FUV" secondAttribute="bottom" constant="10" id="jCZ-Mz-GoC"/>
                 <constraint firstItem="4Qn-MH-44e" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="kE0-AS-LIk"/>
                 <constraint firstAttribute="trailing" secondItem="B1y-hc-FUV" secondAttribute="trailing" constant="10" id="vhT-WR-zfy"/>
                 <constraint firstAttribute="bottom" secondItem="4Qn-MH-44e" secondAttribute="bottom" id="y8u-ZO-Jhg"/>
