--- a/Gangyebab/Gangyebab/Home/View/Cell/TodoCollectionViewCell.xib
+++ b/Gangyebab/Gangyebab/Home/View/Cell/TodoCollectionViewCell.xib
@@ -16,74 +16,55 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="gTV-IL-0wX" customClass="TodoCollectionViewCell" customModule="Gangyebab" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="346" height="30"/>
+            <rect key="frame" x="0.0" y="0.0" width="346" height="40"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="346" height="30"/>
+                <rect key="frame" x="0.0" y="0.0" width="346" height="40"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Qn-MH-44e" userLabel="Under Line">
-                        <rect key="frame" x="0.0" y="29" width="346" height="1"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="1" id="zGa-6Z-j1o"/>
-                        </constraints>
-                    </view>
                     <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="B1y-hc-FUV">
-                        <rect key="frame" x="10" y="0.0" width="326" height="23"/>
+                        <rect key="frame" x="10" y="11" width="326" height="18"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="circle.inset.filled" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="hVj-YQ-NJh">
-                                <rect key="frame" x="0.0" y="0.99999999999999822" width="23" height="21.666666666666664"/>
-                                <color key="tintColor" name="stringColor1"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="hVj-YQ-NJh" secondAttribute="height" multiplier="1:1" id="6v4-js-cz1"/>
-                                </constraints>
-                            </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SX7-AS-bGQ" userLabel="Importance Color">
-                                <rect key="frame" x="28" y="0.0" width="5" height="23"/>
+                                <rect key="frame" x="0.0" y="0.0" width="5" height="18"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="5" id="PsM-He-gX0"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Qc-RF-VKx" userLabel="Content Label">
-                                <rect key="frame" x="38" y="0.0" width="37" height="23"/>
+                                <rect key="frame" x="10" y="0.0" width="41.666666666666664" height="18"/>
                                 <fontDescription key="fontDescription" name="SOYO-Maple-Regular" family="SOYO Maple" pointSize="15"/>
                                 <color key="textColor" name="stringColor1"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HNo-HF-cez">
-                                <rect key="frame" x="80" y="0.0" width="246" height="23"/>
+                                <rect key="frame" x="56.666666666666657" y="0.0" width="269.33333333333337" height="18"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                         </subviews>
-                        <constraints>
-                            <constraint firstItem="hVj-YQ-NJh" firstAttribute="height" secondItem="B1y-hc-FUV" secondAttribute="height" id="zh8-BY-mG2"/>
-                        </constraints>
                     </stackView>
                 </subviews>
             </view>
+            <color key="backgroundColor" name="background1"/>
             <constraints>
-                <constraint firstItem="B1y-hc-FUV" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="1hc-kQ-qfd"/>
-                <constraint firstAttribute="trailing" secondItem="4Qn-MH-44e" secondAttribute="trailing" id="3OU-dx-QZR"/>
+                <constraint firstItem="B1y-hc-FUV" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="11" id="9lq-O2-xL3"/>
                 <constraint firstItem="B1y-hc-FUV" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="Kin-kz-NiX"/>
-                <constraint firstAttribute="bottom" secondItem="B1y-hc-FUV" secondAttribute="bottom" constant="7" id="jCZ-Mz-GoC"/>
-                <constraint firstItem="4Qn-MH-44e" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="kE0-AS-LIk"/>
+                <constraint firstAttribute="bottom" secondItem="B1y-hc-FUV" secondAttribute="bottom" constant="11" id="jCZ-Mz-GoC"/>
                 <constraint firstAttribute="trailing" secondItem="B1y-hc-FUV" secondAttribute="trailing" constant="10" id="vhT-WR-zfy"/>
-                <constraint firstAttribute="bottom" secondItem="4Qn-MH-44e" secondAttribute="bottom" id="y8u-ZO-Jhg"/>
             </constraints>
             <size key="customSize" width="318" height="124"/>
             <connections>
-                <outlet property="checkImage" destination="hVj-YQ-NJh" id="hof-xo-J25"/>
                 <outlet property="contentLabel" destination="0Qc-RF-VKx" id="tqJ-18-tc4"/>
                 <outlet property="importanceColor" destination="SX7-AS-bGQ" id="Yvg-q9-DJG"/>
-                <outlet property="underLine" destination="4Qn-MH-44e" id="9GW-gM-McW"/>
             </connections>
-            <point key="canvasLocation" x="160.30534351145039" y="33.802816901408455"/>
+            <point key="canvasLocation" x="165" y="41"/>
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="circle.inset.filled" catalog="system" width="128" height="123"/>
+        <namedColor name="background1">
+            <color red="0.99607843137254903" green="0.97254901960784312" blue="0.94509803921568625" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="stringColor1">
             <color red="0.34509803921568627" green="0.18823529411764706" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
